--- a/zft-adapter/src/main/resources/templates/clinic/clinic.html
+++ b/zft-adapter/src/main/resources/templates/clinic/clinic.html
@@ -38,7 +38,7 @@
             <div class="visit-div" th:fragment="visitbar">
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         甲乙丙
@@ -47,7 +47,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"  style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         少打
@@ -56,7 +56,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #5db2f1;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -65,7 +65,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -74,25 +74,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
-                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                        </svg>
-                        大声道
-                    </p>
-                    <p class="time">09:16</p>
-                </div>
-                <div class="visit">
-                <p class="name">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
-                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                    </svg>
-                    大声道
-                </p>
-                <p class="time">09:16</p>
-            </div>
-                <div class="visit">
-                    <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -101,7 +83,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #5db2f1;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -110,7 +92,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -119,7 +101,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -128,7 +110,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #5db2f1;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -137,7 +119,7 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #5db2f1;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -146,7 +128,25 @@
                 </div>
                 <div class="visit">
                     <p class="name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                        </svg>
+                        大声道
+                    </p>
+                    <p class="time">09:16</p>
+                </div>
+                <div class="visit">
+                    <p class="name">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #5db2f1;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                        </svg>
+                        大声道
+                    </p>
+                    <p class="time">09:16</p>
+                </div>
+                <div class="visit">
+                    <p class="name">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="color: #ff6587;" class="bi bi-person-fill svg-text" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                         </svg>
                         大声道
@@ -247,7 +247,16 @@
                             <p>主&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;诉:</p>
                         </div>
                         <div class="order-input">
-                            <input type="text" name="advice_chief" style="border: 0;font-size: 16px;">
+                            <textarea id="textarea1" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="order-div">
+                        <div class="order-text">
+                            <p>现&nbsp;&nbsp;病&nbsp;&nbsp;史:</p>
+                        </div>
+                        <div class="order-input">
+                            <textarea id="textarea2" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
                         </div>
                     </div>
                     <hr>
@@ -256,7 +265,7 @@
                             <p>既&nbsp;&nbsp;往&nbsp;&nbsp;史:</p>
                         </div>
                         <div class="order-input">
-                            <input type="text" name="advice_past_history" style="border: 0;font-size: 16px;">
+                            <textarea id="textarea3" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
                         </div>
                     </div>
                     <hr>
@@ -265,34 +274,25 @@
                             <p>遗&nbsp;&nbsp;传&nbsp;&nbsp;史:</p>
                         </div>
                         <div class="order-input">
-                            <input type="text" name="advice_genetic_history" style="border: 0;font-size: 16px;">
+                            <textarea id="textarea4" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
                         </div>
                     </div>
                     <hr>
                     <div class="order-div">
                         <div class="order-text">
-                            <p>体&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;温:</p>
+                            <p>婚&nbsp;&nbsp;育&nbsp;&nbsp;史:</p>
                         </div>
                         <div class="order-input">
-                            <input type="text" name="advice_temperature" style="border: 0;font-size: 16px;">
+                            <textarea id="textarea5" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
                         </div>
                     </div>
                     <hr>
                     <div class="order-div">
                         <div class="order-text">
-                            <p>血&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;压:</p>
+                            <p>体格检查:</p>
                         </div>
                         <div class="order-input">
-                            <input type="text" name="" style="border: 0;font-size: 16px;">
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="order-div">
-                        <div class="order-text">
-                            <p>心&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;率:</p>
-                        </div>
-                        <div class="order-input">
-                            <input type="text" name="advice_heart_rate" style="border: 0;font-size: 16px;">
+                            <textarea id="textarea6" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
                         </div>
                     </div>
                     <hr>
@@ -301,36 +301,8 @@
                             <p>描述症状:</p>
                         </div>
                         <div class="order-input">
-                            <textarea name="advice_description" style="width: 95%;height: 60px;border: 0;resize:none;" placeholder="">
-                            </textarea>
+                            <textarea id="textarea7" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
 <!--                            <input type="text" name="advice_description" style="border: 0;font-size: 16px;">-->
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="order-div">
-                        <div class="order-text">
-                            <p>婚姻状态:</p>
-                        </div>
-                        <div class="order-input">
-                            <input type="text" name="advice_marital_status" style="border: 0;font-size: 16px;">
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="order-div">
-                        <div class="order-text">
-                            <p>育子状态:</p>
-                        </div>
-                        <div class="order-input">
-                            <input type="text" name="advice_fertile_status" style="border: 0;font-size: 16px;">
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="order-div">
-                        <div class="order-text">
-                            <p>望闻问切:</p>
-                        </div>
-                        <div class="order-input">
-                            <input type="text" name="advice_look_hear_ask" style="border: 0;font-size: 16px;">
                         </div>
                     </div>
                     <hr>
@@ -339,7 +311,7 @@
                             <p>诊&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;断:</p>
                         </div>
                         <div class="order-input">
-                            <input type="text" name="advice_diagnosis" style="border: 0;font-size: 16px;">
+                            <textarea id="textarea8" name="advice_description" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
                         </div>
                     </div>
                     <hr>
@@ -348,8 +320,7 @@
                             <p>治&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;法:</p>
                         </div>
                         <div class="order-input">
-                            <textarea name="advice_treatment_method" style="width: 95%;height: 60px;border: 0;resize:none;" placeholder="">
-                            </textarea>
+                            <textarea id="textarea9" name="advice_treatment_method" style="width: 95%;border: 0;resize:none;" placeholder=""></textarea>
                         </div>
                     </div>
                     <hr>
@@ -621,6 +592,75 @@
             setInterval(() => {
                 this.getDate()
             }, 1000)
+        }
+
+        const textarea1 = document.getElementById('textarea1');
+        const textarea2 = document.getElementById('textarea2');
+        const textarea3 = document.getElementById('textarea3');
+        const textarea4 = document.getElementById('textarea4');
+        const textarea5 = document.getElementById('textarea5');
+        const textarea6 = document.getElementById('textarea6');
+        const textarea7 = document.getElementById('textarea7');
+        const textarea8 = document.getElementById('textarea8');
+        const textarea9 = document.getElementById('textarea9');
+
+        textarea1.addEventListener('input', (e) => {
+            textarea1.style.height = '16px';
+            textarea1.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea2.addEventListener('input', (e) => {
+            textarea2.style.height = '16px';
+            textarea2.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea3.addEventListener('input', (e) => {
+            textarea3.style.height = '16px';
+            textarea3.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea4.addEventListener('input', (e) => {
+            textarea4.style.height = '16px';
+            textarea4.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea5.addEventListener('input', (e) => {
+            textarea5.style.height = '16px';
+            textarea5.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea6.addEventListener('input', (e) => {
+            textarea6.style.height = '16px';
+            textarea6.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea7.addEventListener('input', (e) => {
+            textarea7.style.height = '16px';
+            textarea7.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea8.addEventListener('input', (e) => {
+            textarea8.style.height = '16px';
+            textarea8.style.height = e.target.scrollHeight + 'px';
+        });
+
+        textarea9.addEventListener('input', (e) => {
+            textarea9.style.height = '16px';
+            textarea9.style.height = e.target.scrollHeight + 'px';
+        });
+
+
+        // 添加div点击变色效果
+        const visits = document.querySelectorAll('.visit');
+        for (let i = 0; i < visits.length; i++) {
+            visits[i].addEventListener('click',function () {
+                for (let j = 0; j < visits.length; j++) {
+                    if (visits[j] !== this) {
+                        visits[j].classList.remove('active1');
+                    }
+                }
+                this.classList.add('active1');
+            })
         }
     </script>
 </body>
