--- a/zft-adapter/src/main/resources/templates/common/common.html
+++ b/zft-adapter/src/main/resources/templates/common/common.html
@@ -12,7 +12,6 @@
     <link th:href="@{/bootstrap/css/mystyle.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" media="all">
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" th:src="@{/layui/layui.js}"></script>
     <script type="text/javascript" th:src="@{/bootstrap/js/jquery-3.2.1.slim.min.js}"></script>
     <script type="text/javascript" th:src="@{/bootstrap/js/popper.min.js}"></script>
@@ -34,10 +33,10 @@
         </div>
         <div class="header-left" onclick="window.open('http://localhost:8080/clinic/toClinic','_self')"><p>门诊</p></div>
         <div class="header-left" style="width: 180px;" onclick="window.open('http://localhost:8080/charge/toCharge','_self')"><p>收费发药</p></div>
-        <div class="header-left" onclick="window.open('http://localhost:8080/patient/toPatient','_self')"><p>患者</p></div>
+        <div class="header-left" onclick="window.open('http://localhost:8080/patient/toPatientInfo','_self')"><p>患者</p></div>
         <div class="header-left" onclick="window.open('http://localhost:8080/inventory/toInventory','_self')"><p>库存</p></div>
-        <div class="header-left" onclick="window.open('http://localhost:8080/manage/toClinic','_self')"><p>管理</p></div>
         <div class="header-left" onclick="window.open('http://localhost:8080/statistics/toStatistics','_self')"><p>统计</p></div>
+        <div class="header-left" onclick="window.open('http://localhost:8080/manage/toClinic','_self')"><p>管理</p></div>
         <div class="header-right"><p>当前诊所：成都大学诊所</p></div>
     </div>
 </nav>
@@ -45,7 +44,7 @@
 <nav th:fragment="inventoryMeau">
     <div class="tip" onclick="window.open('http://localhost:8080/inventory/toInventory','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-capsule svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color: #6bc1e4;" fill="currentColor" class="bi bi-capsule svg-text" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1.828 8.9 8.9 1.827a4 4 0 1 1 5.657 5.657l-7.07 7.071A4 4 0 1 1 1.827 8.9Zm9.128.771 2.893-2.893a3 3 0 1 0-4.243-4.242L6.713 5.429l4.243 4.242Z"/>
             </svg>&nbsp;
             药品/物资
@@ -53,7 +52,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/inventory/toInventoryIn','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-square-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color: #62bd4b;" fill="currentColor" class="bi bi-arrow-down-square-fill svg-text" viewBox="0 0 16 16">
                 <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5a.5.5 0 0 1 1 0z"/>
             </svg>&nbsp;
             入库
@@ -61,7 +60,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/inventory/toInventoryOut','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-square-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color: #ff3f33;" fill="currentColor" class="bi bi-arrow-up-square-fill svg-text" viewBox="0 0 16 16">
                 <path d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2zm6.5-4.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 1 0z"/>
             </svg>&nbsp;
             出库
@@ -69,7 +68,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/inventory/toInventoryCheck','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color: #1a7fd2;" fill="currentColor" class="bi bi-archive-fill svg-text" viewBox="0 0 16 16">
                 <path d="M12.643 15C13.979 15 15 13.845 15 12.5V5H1v7.5C1 13.845 2.021 15 3.357 15h9.286zM5.5 7h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1zM.8 1a.8.8 0 0 0-.8.8V3a.8.8 0 0 0 .8.8h14.4A.8.8 0 0 0 16 3V1.8a.8.8 0 0 0-.8-.8H.8z"/>
             </svg>&nbsp;
             盘点
@@ -80,7 +79,7 @@
 <nav th:fragment="manageMeau">
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toClinic','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hospital-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#83adf8;" fill="currentColor" class="bi bi-hospital-fill svg-text" viewBox="0 0 16 16">
                 <path d="M6 0a1 1 0 0 0-1 1v1a1 1 0 0 0-1 1v4H1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h6v-2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V16h6a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1h-3V3a1 1 0 0 0-1-1V1a1 1 0 0 0-1-1H6Zm2.5 5.034v1.1l.953-.55.5.867L9 7l.953.55-.5.866-.953-.55v1.1h-1v-1.1l-.953.55-.5-.866L7 7l-.953-.55.5-.866.953.55v-1.1h1ZM2.25 9h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5A.25.25 0 0 1 2 9.75v-.5A.25.25 0 0 1 2.25 9Zm0 2h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5a.25.25 0 0 1 .25-.25ZM2 13.25a.25.25 0 0 1 .25-.25h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5ZM13.25 9h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5a.25.25 0 0 1 .25-.25ZM13 11.25a.25.25 0 0 1 .25-.25h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5Zm.25 1.75h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5a.25.25 0 0 1 .25-.25Z"/>
             </svg>&nbsp;
             诊所管理
@@ -88,7 +87,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toOffices','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#70bad8;" fill="currentColor" class="bi bi-house-door-fill svg-text" viewBox="0 0 16 16">
                 <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
             </svg>&nbsp;
             科室管理
@@ -96,7 +95,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toStaff','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#4bd23a;" fill="currentColor" class="bi bi-people-fill svg-text" viewBox="0 0 16 16">
                 <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                 <path fill-rule="evenodd" d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"/>
                 <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
@@ -106,7 +105,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toEquipment','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-wide svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#cc7832;" fill="currentColor" class="bi bi-gear-wide svg-text" viewBox="0 0 16 16">
                 <path d="M8.932.727c-.243-.97-1.62-.97-1.864 0l-.071.286a.96.96 0 0 1-1.622.434l-.205-.211c-.695-.719-1.888-.03-1.613.931l.08.284a.96.96 0 0 1-1.186 1.187l-.284-.081c-.96-.275-1.65.918-.931 1.613l.211.205a.96.96 0 0 1-.434 1.622l-.286.071c-.97.243-.97 1.62 0 1.864l.286.071a.96.96 0 0 1 .434 1.622l-.211.205c-.719.695-.03 1.888.931 1.613l.284-.08a.96.96 0 0 1 1.187 1.187l-.081.283c-.275.96.918 1.65 1.613.931l.205-.211a.96.96 0 0 1 1.622.434l.071.286c.243.97 1.62.97 1.864 0l.071-.286a.96.96 0 0 1 1.622-.434l.205.211c.695.719 1.888.03 1.613-.931l-.08-.284a.96.96 0 0 1 1.187-1.187l.283.081c.96.275 1.65-.918.931-1.613l-.211-.205a.96.96 0 0 1 .434-1.622l.286-.071c.97-.243.97-1.62 0-1.864l-.286-.071a.96.96 0 0 1-.434-1.622l.211-.205c.719-.695.03-1.888-.931-1.613l-.284.08a.96.96 0 0 1-1.187-1.186l.081-.284c.275-.96-.918-1.65-1.613-.931l-.205.211a.96.96 0 0 1-1.622-.434L8.932.727zM8 12.997a4.998 4.998 0 1 1 0-9.995 4.998 4.998 0 0 1 0 9.996z"/>
             </svg>&nbsp;
             设备管理
@@ -114,7 +113,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toRegistration','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-capsule svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#6bc1e4;" fill="currentColor" class="bi bi-capsule svg-text" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1.828 8.9 8.9 1.827a4 4 0 1 1 5.657 5.657l-7.07 7.071A4 4 0 1 1 1.827 8.9Zm9.128.771 2.893-2.893a3 3 0 1 0-4.243-4.242L6.713 5.429l4.243 4.242Z"/>
             </svg>&nbsp;
             挂号费
@@ -122,7 +121,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toInspection','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-text-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#ffda6e;" fill="currentColor" class="bi bi-file-text-fill svg-text" viewBox="0 0 16 16">
                 <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM5 4h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm0 2h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1z"/>
             </svg>&nbsp;
             检查检验
@@ -130,7 +129,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toTreat','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#ff6587;" fill="currentColor" class="bi bi-heart-fill svg-text" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
             </svg>&nbsp;
             治疗理疗
@@ -138,7 +137,7 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toOther','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#818177;" fill="currentColor" class="bi bi-list svg-text" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
             </svg>&nbsp;
             其他服务
@@ -146,10 +145,48 @@
     </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toPay','_self')">
         <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card-2-back-fill svg-text" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#fcc425;" fill="currentColor" class="bi bi-credit-card-2-back-fill svg-text" viewBox="0 0 16 16">
                 <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5H0V4zm11.5 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2zM0 11v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1H0z"/>
             </svg>&nbsp;
             支付设置
+        </p>
+    </div>
+</nav>
+
+<nav th:fragment="patientMeau">
+    <div class="tip" onclick="window.open('http://localhost:8080/patient/toPatientInfo','_self')">
+        <p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#5db2f1;" fill="currentColor" class="bi bi-people-fill svg-text" viewBox="0 0 16 16">
+                <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                <path fill-rule="evenodd" d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"/>
+                <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
+            </svg>&nbsp;
+            患者数据
+        </p>
+    </div>
+    <div class="tip" onclick="window.open('http://localhost:8080/patient/toCaseHistory','_self')">
+        <p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color: #62b864;" fill="currentColor" class="bi bi-filter-square-fill svg-text" viewBox="0 0 16 16">
+                <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm.5 5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1 0-1zM4 8.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm2 3a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5z"/>
+            </svg>&nbsp;
+            电子病历
+        </p>
+    </div>
+    <div class="tip" onclick="window.open('http://localhost:8080/patient/toVisitHome','_self')">
+        <p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#fe315d;" fill="currentColor" class="bi bi-house-fill svg-text" viewBox="0 0 16 16">
+                <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
+                <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
+            </svg>&nbsp;
+            上门就诊
+        </p>
+    </div>
+    <div class="tip" onclick="window.open('http://localhost:8080/patient/toDiseaseAnalysis','_self')">
+        <p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#dbaa0f;" fill="currentColor" class="bi bi-pie-chart-fill svg-text" viewBox="0 0 16 16">
+                <path d="M15.985 8.5H8.207l-5.5 5.5a8 8 0 0 0 13.277-5.5zM2 13.292A8 8 0 0 1 7.5.015v7.778l-5.5 5.5zM8.5.015V7.5h7.485A8.001 8.001 0 0 0 8.5.015z"/>
+            </svg>&nbsp;
+            病情分析
         </p>
     </div>
 </nav>
