--- a/zft-adapter/src/main/resources/templates/patient/patientDiseaseAnalysis.html
+++ b/zft-adapter/src/main/resources/templates/patient/patientDiseaseAnalysis.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <div th:replace="~{common/common::cjbar}"/>
-    <title>患者</title>
+    <title>患者-病情分析</title>
 </head>
 <body style="background-color: rgb(225,228,232);">
 <div th:replace="~{common/common::headbar}"/>
-
+<div class="patient">
+    <div class="left">
+        <div th:replace="~{common/common::patientMeau}"/>
+    </div>
+    <div class="right">
+    </div>
+</div>
+<script>
+</script>
 </body>
 </html>
